fixed a bug where the footer would overlap the content

--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,8 @@
+html, body {
+    height: 100%
+}
+
+
 .main-header {
 
     /*text-align: center;*/
@@ -25,7 +30,7 @@
 }
 
 .main-footer {
-    position: absolute;
+    position: static;
     bottom: 0;
     width: 100%;
     height: 180px;
@@ -38,7 +43,7 @@
 
 .active {
     background-color: #CE0000;
-    border-radius: 10px;
+    border-radius: 0;
 
 }
 
@@ -55,11 +60,12 @@
 }
 
 .end-page {
-    position: absolute;
+    position: static;
     display: block;
     width: 100%;
-    bottom: 180px;
+    /*bottom: 180px;*/
     height: 40px;
+    margin: 0;
     text-align: center;
     font-size: 20px;
     background-color: #3296C9;
